Fixed widgets collapse animation

--- a/assets/css/containers.css
+++ b/assets/css/containers.css
@@ -68,9 +68,10 @@
 
     display: flex;
     flex-direction: column;
+    align-content: flex-start;
     flex-wrap: wrap;
-    row-gap: var(--spacing-medium);
-    column-gap: var(--spacing-small);
+    row-gap: var(--spacing-small);
+    column-gap: var(--spacing-medium);
 
     margin: var(--spacing-minimum);
     font-size: 1.2em;
