--- a/assets/css/widgets.css
+++ b/assets/css/widgets.css
@@ -8,8 +8,7 @@
     background: var(--back-color-base);
     overflow: hidden;
 
-    height: 300px;
-    min-width: calc(min(400px, 50%));
+    width: calc(min(400px, 50%));
 
     display: flex;
     flex-direction: column;
